; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-bcm-iproc.c_bcm_iproc_i2c_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-bcm-iproc.c_bcm_iproc_i2c_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_iproc_i2c_dev = type { i32 }

@CFG_OFFSET = common dso_local global i32 0, align 4
@CFG_RESET_SHIFT = common dso_local global i32 0, align 4
@CFG_EN_SHIFT = common dso_local global i32 0, align 4
@M_FIFO_RX_FLUSH_SHIFT = common dso_local global i32 0, align 4
@M_FIFO_TX_FLUSH_SHIFT = common dso_local global i32 0, align 4
@M_FIFO_CTRL_OFFSET = common dso_local global i32 0, align 4
@IE_OFFSET = common dso_local global i32 0, align 4
@IE_M_ALL_INTERRUPT_MASK = common dso_local global i32 0, align 4
@IE_M_ALL_INTERRUPT_SHIFT = common dso_local global i32 0, align 4
@IS_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm_iproc_i2c_dev*)* @bcm_iproc_i2c_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm_iproc_i2c_init(%struct.bcm_iproc_i2c_dev* %0) #0 {
  %2 = alloca %struct.bcm_iproc_i2c_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.bcm_iproc_i2c_dev* %0, %struct.bcm_iproc_i2c_dev** %2, align 8
  %4 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %5 = load i32, i32* @CFG_OFFSET, align 4
  %6 = call i32 @iproc_i2c_rd_reg(%struct.bcm_iproc_i2c_dev* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @CFG_RESET_SHIFT, align 4
  %8 = call i32 @BIT(i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = or i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @CFG_EN_SHIFT, align 4
  %12 = call i32 @BIT(i32 %11)
  %13 = xor i32 %12, -1
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %17 = load i32, i32* @CFG_OFFSET, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev* %16, i32 %17, i32 %18)
  %20 = call i32 @udelay(i32 100)
  %21 = load i32, i32* @CFG_RESET_SHIFT, align 4
  %22 = call i32 @BIT(i32 %21)
  %23 = xor i32 %22, -1
  %24 = load i32, i32* %3, align 4
  %25 = and i32 %24, %23
  store i32 %25, i32* %3, align 4
  %26 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %27 = load i32, i32* @CFG_OFFSET, align 4
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev* %26, i32 %27, i32 %28)
  %30 = load i32, i32* @M_FIFO_RX_FLUSH_SHIFT, align 4
  %31 = call i32 @BIT(i32 %30)
  %32 = load i32, i32* @M_FIFO_TX_FLUSH_SHIFT, align 4
  %33 = call i32 @BIT(i32 %32)
  %34 = or i32 %31, %33
  store i32 %34, i32* %3, align 4
  %35 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %36 = load i32, i32* @M_FIFO_CTRL_OFFSET, align 4
  %37 = load i32, i32* %3, align 4
  %38 = call i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev* %35, i32 %36, i32 %37)
  %39 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %40 = load i32, i32* @IE_OFFSET, align 4
  %41 = call i32 @iproc_i2c_rd_reg(%struct.bcm_iproc_i2c_dev* %39, i32 %40)
  store i32 %41, i32* %3, align 4
  %42 = load i32, i32* @IE_M_ALL_INTERRUPT_MASK, align 4
  %43 = load i32, i32* @IE_M_ALL_INTERRUPT_SHIFT, align 4
  %44 = shl i32 %42, %43
  %45 = xor i32 %44, -1
  %46 = load i32, i32* %3, align 4
  %47 = and i32 %46, %45
  store i32 %47, i32* %3, align 4
  %48 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %49 = load i32, i32* @IE_OFFSET, align 4
  %50 = load i32, i32* %3, align 4
  %51 = call i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev* %48, i32 %49, i32 %50)
  %52 = load %struct.bcm_iproc_i2c_dev*, %struct.bcm_iproc_i2c_dev** %2, align 8
  %53 = load i32, i32* @IS_OFFSET, align 4
  %54 = call i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev* %52, i32 %53, i32 -1)
  ret i32 0
}

declare dso_local i32 @iproc_i2c_rd_reg(%struct.bcm_iproc_i2c_dev*, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @iproc_i2c_wr_reg(%struct.bcm_iproc_i2c_dev*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
